================= Unreleased ==================
;Fixed; Minor ; Compiler ; #5676
Fixed a problem causing incorrect annotation trees to be created in some cases.

; Fixed ; Major ; Build system ; #5671
Fixed an issue where gcc compiled FMUs did not work on Windows 10 together
with a VS2017 compiled software.

; Changed ; Minor ; Compiler ; #5670
Update handling of constants, and accesses to package constants, in functions
for improved compilation and simulation performance.

; Fixed ; Minor ; PyFMI ; #5668
Fixed issue with reusing the PyFMI computed FD Jacobian.

; Fixed ; Minor ; Runtime ; #5665
Updated the loglevel conversion between runtime and Kinsol which in some
models has significant impact on the performance.

; Change ; Minor ; Compiler ; #5659
loadResource on directories now always leads to compile time evaluation of path.

; Fixed ; Minor ; Compiler ; #5642
Improved and added tests for SimpleLookup. Now supports Quoted names.

; Fixed ; Minor ; Compiler ; #5640 
Fixed a problem where functions had to restrictive visibility.
Added header information for functions which needed greater visibility.

; Fixed ; Minor ; Compiler ; #5632
Fixed issue with FExp.dynamicFExp(FExp exp) for null input.

; Fixed ; Minor ; PyFMI ; #5624
Made binary result saving more robust.

; Fixed ; Minor ; PyFMI ; #5623
Fixed issue with using the result filter together with FMI1

; Change ; Minor ; MSL ; #5619
Patched MSL resources to work with VS2015.

; Feature ; Minor ; Compiler ; #5605
Support for initial parameter external objects.

; Change ; Minor ; Compiler ; #5612 
Changed error check of arguments when compiling from command line to allow empty library argument if a
modelica path is supplied.

; Fixed ; Minor ; PyFMI ; #5615
Improved input handling for FMI2

; Fixed ; Minor ; PyFMI ; #5613
Fixed simulation logging when there are no states.

; Fixed ; Minor ; Compiler ; #5569
Fixed bug where generic annotation framework returned wrong value or threw