@@ -201,10 +201,12 @@ fmi2Status fmi2_cs_instantiate(fmi2Component c,
 
 /* Helper method for fmi2_free_instance. */
 void fmi2_cs_free_instance(fmi2Component c) {
-    jmi_free_ode_solver(((fmi2_cs_t *)c)->ode_problem->ode_solver);
-    jmi_free_ode_problem(((fmi2_cs_t*)c)->ode_problem);
-    jmi_free_cs_data(((fmi2_cs_t*)c)->cs_data);
-    fmi2_me_free_instance(c);
+    if (c) {
+        jmi_free_ode_solver(((fmi2_cs_t *)c)->ode_problem->ode_solver);
+        jmi_free_ode_problem(((fmi2_cs_t*)c)->ode_problem);
+        jmi_free_cs_data(((fmi2_cs_t*)c)->cs_data);
+        fmi2_me_free_instance(c);
+    }
 }
 
 fmi2Status fmi2_cs_set_real_inputs(jmi_cs_data_t* cs_data, fmi2Real time) {
